Bug 1373155 - Disable Web Components in Servo-styled documents. r=wchen

MozReview-Commit-ID: 5IBBN2Gfazs